--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,16 @@
     <footer class="footer-distributed">
       <div class="container">
         <div class="footer">
-          <p>{{ site.author }} &copy; {{ site.copyright }}</p>
+
+
+
+          <style>
+            .label{
+              cursor: default;
+              border-radius: 5px;
+              padding: 5px 8px;
+            }
+          </style>
           {% include social.html %}
         </div>
       </div>
