--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -51,9 +51,9 @@ body {
   width: 75%;
 }
 
-h1 { font-size: 2em; }
-h2 { font-size: 1.5em; }
-h3 { font-size: 1.17em; }
+h1 { font-size: 2em; color: #C1FFCA;}
+h2 { font-size: 1.5em; color: #C1FFCA; }
+h3 { font-size: 1.17em; color: #C1FFCA;}
 h4 { font-size: 1.12em; }
 h5 { font-size: .83em; }
 h6 { font-size: .75em; }
